--- a/code/package.json
+++ b/code/package.json
@@ -7,13 +7,14 @@
   "devDependencies": {
     "@babel/cli": "^7.13.0",
     "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-export-default-from": "^7.12.13",
     "@babel/plugin-transform-arrow-functions": "^7.13.0",
     "@babel/plugin-transform-function-name": "^7.12.13",
     "@babel/preset-env": "^7.13.9",
-    "css-loader": "^5.1.1",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.1",
     "html-webpack-plugin": "^5.2.0",
+    "mini-css-extract-plugin": "^1.3.9",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
@@ -22,7 +23,7 @@
   },
   "scripts": {
     "start": "webpack --config webpack.config.js",
-    "babel-run": "babel src/JS -d babel_dist"
+    "babel-run": "babel src -d babel_dist"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "babel-loader": "^8.2.2",
-    "core-js": "^3.9.1"
+    "core-js": "^3.9.1",
+    "css-loader": "^5.1.1"
   }
 }
