--- a/code/package.json
+++ b/code/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@babel/cli": "^7.13.0",
     "@babel/core": "^7.13.8",
+    "@babel/plugin-proposal-do-expressions": "^7.12.13",
     "@babel/plugin-proposal-export-default-from": "^7.12.13",
     "@babel/plugin-transform-arrow-functions": "^7.13.0",
     "@babel/plugin-transform-function-name": "^7.12.13",
